Fixed merge conflict